# Project_DanielO

./: CMakeLists.txt  DB_local.cpp  DB_local.db  DB_local.h  IN_cuba_app.cpp  IN_cuba_app.h  IN_cuba_uml.mdj  Incubadora.h  Sensor.cpp  Sensor.h  Temp_Hum.h  main.cpp  mainwindow.ui
